--- a/assets/style.css
+++ b/assets/style.css
@@ -6,15 +6,12 @@
     box-sizing: border-box;
     font-family:'Montserrat';
 }
-
-/* h3{
-    grid-area: main;
-    text-align: center;
+h1, h2, h3{
     font-family: 'Montserrat';
-    font-size: 25px;
-    font-weight: 700;
     color: rgb(245, 151, 148);
-    display: flex;
-    justify-content: center;
     padding: 5px;
-} */
+}
+.nosotros{
+    padding-bottom: 50px;
+    padding-top: 50px;
+}
